--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "esbuild src/app.jsx --bundle --outfile=out.js"
+    "build": "esbuild src/app.jsx --bundle --outfile=out.js",
+    "build:hello": "esbuild src/hello.jsx --bundle --outfile=dist/hello.js"
   },
   "keywords": [],
   "author": "",
