--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "cypress": "5.5.0",
     "esbuild": "0.8.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
