--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "5.5.0",
+    "cypress-react-unit-test": "4.16.7",
     "esbuild": "0.8.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
